--- a/styles/main.css
+++ b/styles/main.css
@@ -48,7 +48,6 @@ nav ul li:hover {
 
 main {
   float: left;
-  margin-top: 30px;
   margin-left: 50px;
   width: 600px;
 }
@@ -64,7 +63,7 @@ main {
 
 .beer-details img {
   display: block;
-  width: 250px;
+  height: 200px;
   margin: 0 auto 25px auto;
 }
 
